# vedi-collection-website

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml  starting-prompt.md
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 202606110001_initial_schema.py  202606170001_add_product_audience_subcategory.py  202606200001_add_product_mrp.py
backend/app/: main.py  scheduler.py
backend/app/core/: config.py  database.py  deps.py  security.py
backend/app/models/: __init__.py  base.py  change_log.py  enums.py  order.py  product.py  sync_log.py  user.py
backend/app/routers/: __init__.py  account.py  admin.py  auth.py  shop.py
backend/app/schemas/: admin_user.py  auth.py  change_log.py  product.py
backend/app/services/: audit.py  meta_catalog.py  storage.py  sync.py
backend/tests/: conftest.py  test_admin_users.py  test_auth.py  test_change_log.py  test_meta_catalog.py  test_products.py  test_storage.py  test_sync.py
design_ref/: README.md  Vedi Collections Desktop.dc.html  Vedi Collections.dc.html
docs/: phase-1-notes.md  phase-2-notes.md
frontend/: eslint.config.mjs  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx
frontend/app/(shop)/: layout.tsx  page.tsx
frontend/app/admin/: page.tsx
frontend/components/admin/: ImageCropDialog.tsx  MediaUploader.tsx  (+1 more)
frontend/lib/: api.ts  auth-context.tsx  auth.ts  cn.ts
scripts/: apply_migration.py  schema.sql  seed_admin.py  seed_seller.py
(+45 files in other folders)
